# rustymail

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  SECURITY.md  jsconfig.json  package-lock.json  package.json  svelte.config.js  vite.config.js  vitest-setup.js  vitest.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: ad2a0c96-bd2b-44e0-b066-507f329ba492.json  b408bfc4-801b-40ae-a9be-7c5414de203a.json  cddfaf6b-118f-4dd2-b7cd-f1dfa0b3170b.json
.omc/state/: hud-state.json  hud-stdin-cache.json  last-tool-error.json
.omc/state/checkpoints/: checkpoint-2026-04-10T07-24-37-122Z.json  checkpoint-2026-04-10T07-37-16-067Z.json  checkpoint-2026-04-10T08-06-04-773Z.json  checkpoint-2026-04-10T08-22-55-864Z.json
docs/: PRIVACY.md  TERMS.md  byo-oauth-setup.md
docs/plans/: 2025-05-01-contact-management.md  2026-05-07-contact-discovery.md  FOR-5-snooze-free-tier.md
plans/: sunny-gathering-pearl.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/rustymail-premium/: Cargo.toml
src-tauri/crates/rustymail-premium/src/: lib.rs
src-tauri/crates/rustymail-premium/src/commands/: llm.rs
src-tauri/crates/rustymail-premium/src/llm/: engine.rs
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  caldav_api.rs  calendar_api.rs  credentials.rs  db.rs  email_utils.rs  gmail_api.rs  lib.rs  main.rs  outlook_api.rs  page_token_store.rs  subscription_detector.rs  test_lettre.rs  tray.rs
src-tauri/src/commands/: accounts.rs  action_items.rs  calendar.rs  compose.rs  contacts.rs  feed.rs  labels.rs  messages.rs  misc.rs  mod.rs  schedule.rs  search.rs  settings.rs  snooze.rs  subscriptions.rs  sync.rs  templates.rs  test_helpers.rs  threads.rs
src-tauri/src/contacts/: discovery.rs  google_contacts.rs  mod.rs  outlook_contacts.rs
src-tauri/src/provider/: folder_mapping.rs  mod.rs  types.rs
src-tauri/src/provider/imap/: autodiscover.rs  connection.rs  folders.rs  idle.rs  mod.rs  operations.rs  provider.rs  smtp.rs  sync.rs  threading.rs
src/lib/: shortcut-manager.ts
src/lib/components/: AISummaryPanel.svelte  AISummaryPanel.test.js  ActionsView.svelte  ActionsView.test.js  CalendarSidebar.svelte  CalendarSidebar.test.js  CategoryTabs.svelte  CommandPalette.svelte  Compose.svelte  Compose.test.js  ContactForm.svelte  ContactForm.test.js  ContactHoverCard.svelte  ContactHoverCard.test.js  ContactImportExport.svelte  Contacts.svelte  Contacts.test.js  EventModal.svelte  FeedView.svelte  FeedView.test.js  FullCalendar.svelte  ImapAccountForm.svelte  LabelPicker.svelte  LinkSafetyDialog.svelte  MessageDetail.svelte  Settings.svelte  Settings.test.js  Sidebar.svelte  SnoozePopover.svelte  SnoozePopover.test.js  Subscriptions.svelte  Subscriptions.test.js  ThreadList.svelte  Toasts.svelte  Toasts.test.js  UnsubscribeDialog.svelte  UpdateModal.svelte  icons.ts  starIcons.test.js  starIcons.ts
src/lib/stores/: aiSummary.ts  auth.ts  contacts.test.ts  contacts.ts  messages.ts  superstars.ts  threads.ts  toast.test.js  toast.ts
src/lib/utils/: formatters.js  formatters.test.js  htmlSanitizer.test.ts  htmlSanitizer.ts  labelTree.test.js  labelTree.ts  linkSafety.test.ts  linkSafety.ts  snooze.test.ts  (+2 more)
src/routes/: +layout.js  +page.svelte  +page.test.js  page.test.js
static/: email-shell.html
