[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "=2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
oauth2 = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "=3.6.3"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = { version = "0.22", features = ["alloc"] }
dotenvy = "0.15"
futures = "0.3"
lettre = "0.11.19"
urlencoding = "2.1.3"

[dev-dependencies]
mockall = "0.14"
tokio-test = "0.4"
tempfile = "3"
httpmock = "0.8"
